--- a/fast_api_from_spec/fast_api_template.jinja2
+++ b/fast_api_from_spec/fast_api_template.jinja2
@@ -2,7 +2,10 @@ from fastapi import FastAPI
 import requests
 from fastapi.responses import JSONResponse
 import pandas as pd
-from transform import transform_functions
+from transform import handle_transform
+from acg.executor import exec
+from langchain_core.documents.base import Document
+from acg.types import ApiCallInf,ApiCallIssues
 
 app = FastAPI()
 
@@ -23,27 +26,9 @@ async def {{ endpoint.name }}({% for param in endpoint.parameters %}{{ param.nam
         "{{ param.name }}": {{ param.name }}{%- if not loop.last %},{%- endif %}
         {%- endfor %}
     }
-    response = requests.{{ endpoint.method }}("{{teadal_server}}{{ endpoint.path }}".format(**path_params), params=query_params)
-    response_data = response.json()
-    # Perform your transformation here
-    # Transform to DF.
-    # Create DataFrame from the response data
-    {%- set flag = {'value': True} %}
-    {%- for  func in functions | selectattr('endpoint', 'equalto', endpoint.name) %}
-    # Convert the response to a DataFrame (df) if the function requires it
-    df = pd.DataFrame(response_data)
-    {%- if flag.update({'value': False}) %}
-    {%- endif %}
-    # Apply transformation function to the specific endpoint
-    result = transform_functions.{{ func.name }}(df=df,
-        {%- for param_name, param_value in func.parameters.items() if param_name != 'df' %}
-        {{ param_name }}={{ param_value }}{% if not loop.last %}, {% endif %}
-        {%- endfor %}
-    )
-    return JSONResponse(result)
-    {%- endfor %}
-    {%- if flag['value'] %}
-    return JSONResponse(response_data)
-    {%- endif %}
-    
+    # Create Yaml and run executor
+    con_spec = handle_transform.create_spec_section({{endpoint}}, '{{teadal_server}}', "1234", "apiToken", path_params, query_params)
+    full_spec = handle_transform.add_export_section('{{endpoint.name}}', con_spec, {{results}})
+    res = exec.run_from_spec_string(full_spec)
+    return res
 {% endfor %}
