--- a/fast_api_from_spec/fast_api_template.jinja2
+++ b/fast_api_from_spec/fast_api_template.jinja2
@@ -30,5 +30,6 @@ async def {{ endpoint.name }}({% for param in endpoint.parameters %}{{ param.nam
     con_spec = handle_transform.create_spec_section({{endpoint}}, '{{teadal_server}}', "1234", "apiToken", path_params, query_params)
     full_spec = handle_transform.add_export_section('{{endpoint.name}}', con_spec, {{results}})
     res = exec.run_from_spec_string(full_spec)
-    return res
+    response_data = {key: df.to_dict(orient='records') for key, df in res.items()}
+    return JSONResponse(response_data)
 {% endfor %}
