--- a/fast_api_from_spec/fast_api_template.jinja2
+++ b/fast_api_from_spec/fast_api_template.jinja2
@@ -1,10 +1,9 @@
 from fastapi import FastAPI
-import requests
 from fastapi.responses import JSONResponse
-import pandas as pd
+
 from transform import handle_transform
+
 from acg.executor import exec
-from langchain_core.documents.base import Document
 from acg.types import ApiCallInf,ApiCallIssues
 
 app = FastAPI()
@@ -28,7 +27,7 @@ async def {{ endpoint.sfdp_endpoint_name }}({% for param in endpoint.parameters 
     }
     # Create Yaml and run executor
     endpoint_data = {{endpoint}}
-    con_spec = handle_transform.create_spec_section(endpoint_data, '{{teadal_server}}', "1234", "apiToken", path_params, query_params)
+    con_spec = handle_transform.create_spec_section(endpoint_data, '{{teadal_server}}', '{{apiKey}}', "apiToken", path_params, query_params)
 
     transformations_instructions = {{results}}
     full_spec = handle_transform.add_export_section('{{endpoint.sfdp_endpoint_name}}', con_spec, transformations_instructions)
