some fixes to readme, add /app/transform folder as user defined transfrom functions in docker
Signed-off-by: MohamedMahameed <mohamed.mahameed@ibm.com>

--- a/src/fast_api_template.jinja2
+++ b/src/fast_api_template.jinja2
@@ -36,7 +36,7 @@ async def {{ endpoint.sfdp_endpoint_name }}({% for param in endpoint.parameters 
     spec_string = f"""{full_spec}"""
 
     
-    res = exec.run_from_spec_string(spec_string)
+    res = exec.run_from_spec_string(spec_string, user_functions_path="/app/transform")
     try:
         response_data = {key: (df.dropna()).to_dict(orient='records') for key, df in res.items()}
     except:
