--- a/src/fast_api_template.jinja2
+++ b/src/fast_api_template.jinja2
@@ -1,6 +1,6 @@
 from fastapi import FastAPI, HTTPException
 from fastapi.responses import JSONResponse
-
+import traceback
 
 from gin.executor import exec
 
@@ -37,9 +37,16 @@ async def {{ endpoint.sfdp_endpoint_name }}({% for param in endpoint.parameters 
 
     try:
         res = exec.run_from_spec_string(spec_string, user_functions_path="./transform")
+    except FileNotFoundError as e:
+        raise HTTPException(status_code=404, detail="The specified file or directory was not found.")
+    except PermissionError as e:
+        raise HTTPException(status_code=403, detail="Permission denied. Ensure you have the necessary access rights.")
+    except SyntaxError as e:
+        raise HTTPException(status_code=400, detail=f"Syntax error in the provided spec file: {str(e)}")
     except Exception as e:
-        print(e)
-        raise HTTPException(status_code=500, detail="Executor failed to run the spec file")
+        error_message = f"Executor failed to run the spec file: {str(e)}"
+        traceback.print_exc()  # Logs the full traceback for debugging
+        raise HTTPException(status_code=500, detail=error_message)
     try:
         response_data = {key: (df.dropna()).to_dict(orient='records') for key, df in res.items()}
     except:
