--- a/sfdp-template/sfdp_template.jinja2
+++ b/sfdp-template/sfdp_template.jinja2
@@ -1,33 +1,87 @@
-from fastapi import FastAPI, HTTPException
-from fastapi.responses import JSONResponse
-import traceback
-from pydantic_settings import BaseSettings
+from contextlib import asynccontextmanager
 
-from gin.executor import exec
+from fastapi import FastAPI, HTTPException, Request, Response
+from starlette.status import HTTP_200_OK
 
-class Settings(BaseSettings):
-    debug: bool = False
+from asg_runtime import Executor
 
-settings = Settings()
 
-app = FastAPI()
+@asynccontextmanager
+async def lifespan(app: FastAPI):
+    try:
+        executor = await Executor.async_create()
+        app.state.executor = executor
+        app.state.settings = executor.get_settings()
 
-def log_level_string():
-    if settings.debug:
-        return "DEBUG"
-    else:
-        return None
+        yield  # reached if no errors
+    except Exception:
+        # log and exit on startup error
+        import traceback
+        print(traceback.format_exc())
+        raise
 
-@app.get("/info")
-async def info():
-    return {
-        "debug": settings.debug,
-    }
+    # clean things up if needed
+    await executor.shutdown()
 
-# Define FastAPI endpoints
+
+app = FastAPI(lifespan=lifespan)
+
+# --- Service Endpoints ---
+
+@app.get("/service/settings", tags=["service"])
+def get_settings(request: Request) -> dict:
+    return request.app.state.settings
+
+
+@app.get("/service/stats", tags=["service"])
+async def get_stats(request: Request) -> dict:
+    executor: Executor = request.app.state.executor
+    return executor.get_stats()
+
+
+@app.post("/service/origin_cache/clean", tags=["service"])
+async def clear_origin_cache(request: Request) -> str:
+    executor: Executor = request.app.state.executor
+    result = await executor.async_clear_origin_cache()
+    return result
+
+
+@app.post("/service/response_cache/clean", tags=["service"])
+async def clear_response_cache(request: Request) -> str:
+    executor: Executor = request.app.state.executor
+    result = await executor.async_clear_response_cache()
+    return result
+
+
+# --- Data Endpoints ---
+# helper called by all data endpoints
+async def get_endpoint_data(request: Request, endpoint_spec: str) -> Response:
+    executor: Executor = request.app.state.executor
+    try:
+        result = await executor.async_get_endpoint_data(endpoint_spec)
+
+        if result.get("status") == "ok":
+            return Response(
+                content=result["data"], 
+                media_type="application/json",
+                status_code=HTTP_200_OK)
+        
+        # "status" is is not "ok" - return error
+        raise HTTPException(status_code=500, detail=result.get("message", "Unknown error"))
+
+    except HTTPException:
+        raise
+    except Exception as e:  
+        # unhandled exception - log and return error
+        import traceback
+        print(traceback.format_exc())
+        message = f"Unhandled exception of type {type(e)} in get_endpoint_data: {e}."
+        raise HTTPException(status_code=500, detail=message)
+ 
+# --- Generated Data Endpoints ---
 {% for endpoint in endpoints %}
-@app.{{ endpoint.method }}("{{ endpoint.sfdp_endpoint_path }}")
-async def {{ endpoint.sfdp_endpoint_name }}({% for param in endpoint.parameters %}{{ param.name }}: {% if param.type == 'string' %}str{% elif param.type == 'integer' %}int{% elif param.type == 'boolean' %}bool{% elif param.type == 'number' %}float{% else %}Any{% endif %}{% if param.nullable %} = None{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}):
+@app.{{ endpoint.method }}("{{ endpoint.sfdp_endpoint_path }}", tags=["data"])
+async def {{ endpoint.sfdp_endpoint_name }}(request: Request, {% for param in endpoint.parameters %}{{ param.name }}: {% if param.type == 'string' %}str{% elif param.type == 'integer' %}int{% elif param.type == 'boolean' %}bool{% elif param.type == 'number' %}float{% else %}Any{% endif %}{% if param.nullable %} = None{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}):
     """
     {{ endpoint.description }}
     """
@@ -53,26 +107,5 @@ async def {{ endpoint.sfdp_endpoint_name }}({% for param in endpoint.parameters 
 
     spec_string = f"""{full_spec}"""
 
-    try:
-        res = exec.run_from_spec_string(
-            spec_string, 
-            log_level=log_level_string(),
-            user_functions_path="./transform")
-    except FileNotFoundError as e:
-        raise HTTPException(status_code=404, detail="The specified file or directory was not found.")
-    except PermissionError as e:
-        raise HTTPException(status_code=403, detail="Permission denied. Ensure you have the necessary access rights.")
-    except SyntaxError as e:
-        raise HTTPException(status_code=400, detail=f"Syntax error in the provided spec file: {str(e)}")
-    except Exception as e:
-        error_message = f"Executor failed to run the spec file: {str(e)}"
-        traceback.print_exc()  # Logs the full traceback for debugging
-        raise HTTPException(status_code=500, detail=error_message)
-    
-    try:
-        response_data = {key: (df.dropna()).to_dict(orient='records') for key, df in res.items()}
-    except:
-        # In case no transformations, return json.
-        return JSONResponse(res['.'])
-    return JSONResponse(response_data)
+    return await get_endpoint_data(request, spec_string)
 {% endfor %}
